Edited wiki page Simulation_Tohoku through web user interface.

--- a/wiki/Simulation_Tohoku.wiki
+++ b/wiki/Simulation_Tohoku.wiki
@@ -3,9 +3,9 @@
 
 
 A conceptual cycle simulation of the Tohoku-Oki earthquake.
-The megathrush event has a recurrence time of ~600 years,
-and the deep brittle asperities produce high-frequency contains during the megathrush event.
-These asperities also produces inter-megathrush M7 earthquakes recurring every several years.
+The megathrust event has a recurrence time of ~600 years,
+and the deep brittle asperities produce high-frequency contains during the megathrust event.
+These asperities also produces inter-megathrust M7 earthquakes recurring every several years.
 
 
 
