--- a/trunk/ToDo
+++ b/trunk/ToDo
@@ -4,6 +4,8 @@ Physics:
 + coupling slip to normal stress
 + variable strike
 + triangular elements: Meade's code (buggy?) or Gausian quadrature of Okada point sources
++ layered media: EDKS (Luis Rivera) or Relax (Sylvain Barbot)?
++ heterogeneous media: Relax, Pylith, SPECFEM3D ?
 
 Code engineering and optimization:
 + inputs as fortran namelists
