--- a/utils/devel_tools/README
+++ b/utils/devel_tools/README
@@ -12,7 +12,7 @@ as well as online code editing. If you are new to version control systems
 we recommend you to learn how to use svn. The usual work cycle under svn is 
 explained in http://svnbook.red-bean.com/nightly/en/svn.tour.cycle.html.
 More complete information about svn is found in http://svnbook.red-bean.com/.
-The svn commands accesible in github are described in
+The svn commands accessible in github are described in
 https://help.github.com/articles/support-for-subversion-clients/.
 
 CODE DEVELOPMENT:
