--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,8 @@
 (Priorities are not indicated)
 
 Bugs:
-+ anyone knows how to fix the image link ![](https://goo.gl/pI9uAo) in wiki/Simulation_Cascadia_Tremor -- Content length exceeded?
++? in compute_stress_3d, is the assumed symmetry valid also for the normal-stress kernel?
++ broken image link ![](https://goo.gl/pI9uAo) in wiki/Simulation_Cascadia_Tremor -- Content length exceeded?
 
 Physics:
 + 2D kernel for damage zones with finite fault size (FINITE=1)
