--- a/examples/notebooks/RSF_spring-block.ipynb
+++ b/examples/notebooks/RSF_spring-block.ipynb
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "p.ot.head(10)"
+    "p.ot[0].head(10)"
    ]
   },
   {
@@ -1298,17 +1298,17 @@
     "\n",
     "# Normalised shear stress\n",
     "plt.subplot(311)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"tau\"] / set_dict[\"SIGMA\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"tau\"] / set_dict[\"SIGMA\"])\n",
     "plt.ylabel(r\"$\\tau / \\sigma$ [-]\")\n",
     "\n",
     "# State\n",
     "plt.subplot(312)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"theta\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"theta\"])\n",
     "plt.ylabel(r\"$\\theta$ [s]\")\n",
     "\n",
     "# Velocity\n",
     "plt.subplot(313)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"v\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"v\"])\n",
     "plt.yscale(\"log\")\n",
     "plt.ylabel(r\"$v$ [m/s]\")\n",
     "plt.xlabel(\"time [s]\")\n",
@@ -1341,7 +1341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
