--- a/examples/notebooks/single_asperity_3D.ipynb
+++ b/examples/notebooks/single_asperity_3D.ipynb
@@ -1840,14 +1840,14 @@
     "\n",
     "# Slip rate\n",
     "plt.subplot(121)\n",
-    "plt.plot(p.ot[\"t\"] / t_yr, p.ot[\"v\"])\n",
+    "plt.plot(p.ot[0][\"t\"] / t_yr, p.ot[0][\"v\"])\n",
     "plt.xlabel(\"t [years]\")\n",
     "plt.ylabel(\"V [m/s]\")\n",
     "plt.yscale(\"log\")\n",
     "\n",
     "# Shear stress\n",
     "plt.subplot(122)\n",
-    "plt.plot(p.ot[\"t\"] / t_yr, p.ot[\"tau\"] * 1e-6)\n",
+    "plt.plot(p.ot[0][\"t\"] / t_yr, p.ot[0][\"tau\"] * 1e-6)\n",
     "plt.xlabel(\"t [years]\")\n",
     "plt.ylabel(\"stress [MPa]\")\n",
     "\n",
