--- a/examples/notebooks/CNS_spring-block.ipynb
+++ b/examples/notebooks/CNS_spring-block.ipynb
@@ -485,7 +485,7 @@
     }
    ],
    "source": [
-    "p.ot.head(10)"
+    "p.ot[0].head(10)"
    ]
   },
   {
@@ -1300,17 +1300,17 @@
     "\n",
     "# Normalised shear stress\n",
     "plt.subplot(311)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"tau\"] / set_dict[\"SIGMA\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"tau\"] / set_dict[\"SIGMA\"])\n",
     "plt.ylabel(r\"$\\tau / \\sigma$ [-]\")\n",
     "\n",
     "# Porosity\n",
     "plt.subplot(312)\n",
-    "plt.plot(p.ot[\"t\"], 100 * p.ot[\"theta\"])\n",
+    "plt.plot(p.ot[0][\"t\"], 100 * p.ot[0][\"theta\"])\n",
     "plt.ylabel(r\"$\\phi$ [%]\")\n",
     "\n",
     "# Velocity\n",
     "plt.subplot(313)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"v\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"v\"])\n",
     "plt.yscale(\"log\")\n",
     "plt.ylabel(r\"$v$ [m/s]\")\n",
     "plt.xlabel(\"time [s]\")\n",
@@ -2139,15 +2139,15 @@
     "# Plot time series\n",
     "plt.figure()\n",
     "plt.subplot(311)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"tau\"] / set_dict[\"SIGMA\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"tau\"] / set_dict[\"SIGMA\"])\n",
     "plt.ylabel(r\"$\\tau / \\sigma$ [-]\")\n",
     "\n",
     "plt.subplot(312)\n",
-    "plt.plot(p.ot[\"t\"], 100 * p.ot[\"theta\"])\n",
+    "plt.plot(p.ot[0][\"t\"], 100 * p.ot[0][\"theta\"])\n",
     "plt.ylabel(r\"$\\phi$ [%]\")\n",
     "\n",
     "plt.subplot(313)\n",
-    "plt.plot(p.ot[\"t\"], p.ot[\"v\"])\n",
+    "plt.plot(p.ot[0][\"t\"], p.ot[0][\"v\"])\n",
     "plt.yscale(\"log\")\n",
     "plt.ylabel(r\"$v$ [m/s]\")\n",
     "plt.xlabel(\"time [s]\")\n",
@@ -2180,7 +2180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
