--- a/examples/notebooks/single_asperity.ipynb
+++ b/examples/notebooks/single_asperity.ipynb
@@ -1824,7 +1824,7 @@
    ],
    "source": [
     "# Time series of stress, state, and maximum slip rate on the fault\n",
-    "qdyn_plot.timeseries(p.ot[0])"
+    "qdyn_plot.timeseries(p.ot[0], p.ot_vmax)"
    ]
   },
   {
