--- a/examples/notebooks/RSF_spring-block.ipynb
+++ b/examples/notebooks/RSF_spring-block.ipynb
@@ -505,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('qdyn_test')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
