--- a/examples/notebooks/single_asperity_3D_restart.ipynb
+++ b/examples/notebooks/single_asperity_3D_restart.ipynb
@@ -33,7 +33,6 @@
     "# Go up in the directory tree\n",
     "upup = [os.pardir]*2\n",
     "qdyn_dir = os.path.join(*upup)\n",
-    "qdyn_dir = \"/home/crodriguezpiceda/qdyn_intel_openmp/qdyn\"\n",
     "\n",
     "src_dir = os.path.abspath(\n",
     "    os.path.join(\n",
@@ -501,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +514,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
