--- a/examples/notebooks/single_asperity_3D_restart.ipynb
+++ b/examples/notebooks/single_asperity_3D_restart.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "In this simulation, the only heterogeneity stems from a lateral variation in the direct effect parameter $a$, which is chosen such that the asperity has $(a-b)<0$, and such that the matrix has $(a-b)>0$.\n",
     "\n",
-    "Recall that unlike the initial simulation, we also override the settings related to restarting the model. The restart time is directly retrieved with the function `restart_time`.  \n",
+    "Recall that unlike the initial simulation, we also override the settings related to restarting the model. The restart time and slip are directly retrieved from the output `output_ox_last` with the python function `restart_time()` and `restart_slip()`. \n",
     "\n",
     "**Important**: The simulation time `set_dict[\"TMAX\"]` set in the input file has to be larger than the starting time `set_dict[\"RESTART_TIME\"]`. Otherwise, the simulation won't run"
    ]
@@ -97,6 +97,7 @@
     "# Global simulation parameters\n",
     "set_dict[\"FEAT_RESTART\"] = 1                        # Restart simulation from existing output\n",
     "set_dict[\"RESTART_TIME\"] = p.restart_time()         # Time of last snapshot in previous simulation\n",
+    "set_dict[\"RESTART_SLIP\"] = p.restart_slip()         # Slip of last snapshot in previous simulation\n",
     "\n",
     "set_dict[\"MESHDIM\"] = 2        # Simulation dimensionality (1D fault in 2D medium)\n",
     "set_dict[\"FAULT_TYPE\"] = 2     # Thrust fault\n",
