--- a/examples/notebooks/double_asperity.ipynb
+++ b/examples/notebooks/double_asperity.ipynb
@@ -30522,7 +30522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('qdyn_test')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -30536,7 +30536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
