--- a/examples/notebooks/single_asperity.ipynb
+++ b/examples/notebooks/single_asperity.ipynb
@@ -11,16 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -139,7 +129,7 @@
     "# Distribute direct effect a over mesh according to some arbitrary function\n",
     "p.mesh_dict[\"A\"] = set_dict[\"SET_DICT_RSF\"][\"B\"] * (1 + cab_ratio*(1 - 2*np.exp(-(2*x/Lasp)**6)))\n",
     "\n",
-    "p.set_dict[\"VERBOSE\"] = 1\n",
+    "p.set_dict[\"VERBOSE\"] = 0  # Set to 1 if you want log messages on screen\n",
     "\n",
     "# Write input to qdyn.in\n",
     "p.write_input()"
